feat(addon-gating): move @RequiresAddon from services to controllers (#288)
## Summary

- Move all `@RequiresAddon` annotations from service methods to
controller endpoints — subscription enforcement now happens at the API
boundary, not inside business logic
- Fix a cascade failure where `DashboardService.get()` calls
`ApprovalService.listPendingByProject()` internally; with service-level
gating on both with different addon codes, owner-dashboard requests got
403 unless the subscription included both `DASHBOARD` and `APPROVALS`
- Update 11 integration tests: subscription setup in `@BeforeEach`, FK
teardown ordering, `.getFirst()` over `.get(0)`, method reference over
lambda, and one expectation update (`MilestoneIntegrationTest` no-org
case now correctly expects 403 since the controller gate fires before
the service)

## Test plan

- [x] All unit tests pass (`./gradlew test -PexcludeIntegrationTests`)
- [x] All integration tests pass (`./gradlew test
-PonlyIntegrationTests`)
- [x] Dashboard returns 200 for org owner with DASHBOARD subscription
only (no APPROVALS required)
- [x] Gated endpoints return 403 when org has no matching addon