@@ -14,8 +14,11 @@ import com.opsclear.repository.JobRepository;
 import com.opsclear.repository.JobStatusHistoryRepository;
 import com.opsclear.repository.MilestoneRepository;
 import com.opsclear.repository.OrganisationRepository;
+import com.opsclear.repository.OrgSubscriptionRepository;
 import com.opsclear.repository.ProjectMemberRepository;
 import com.opsclear.repository.ProjectRepository;
+import com.opsclear.repository.SubscriptionAddonRepository;
+import com.opsclear.repository.SubscriptionTierRepository;
 import com.opsclear.repository.UserRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -28,6 +31,7 @@ import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.jwt;
@@ -52,6 +56,9 @@ class JobHistoryIntegrationTest {
     @Autowired private ProjectRepository projectRepository;
     @Autowired private ProjectMemberRepository projectMemberRepository;
     @Autowired private OrganisationRepository organisationRepository;
+    @Autowired private OrgSubscriptionRepository subscriptionRepository;
+    @Autowired private SubscriptionTierRepository tierRepository;
+    @Autowired private SubscriptionAddonRepository addonRepository;
     @Autowired private com.opsclear.repository.FriendlyIdRepository friendlyIdRepository;
     @Autowired private UserRepository userRepository;
 
@@ -69,6 +76,7 @@ class JobHistoryIntegrationTest {
         milestoneRepository.deleteAll();
         projectMemberRepository.deleteAll();
         projectRepository.deleteAll();
+        subscriptionRepository.deleteAll();
         organisationRepository.deleteAll();
         userRepository.deleteAll();
 
@@ -101,6 +109,11 @@ class JobHistoryIntegrationTest {
                 .createdBy(ownerId)
                 .build());
         jobId = job.getId();
+
+        UUID historyAddonId = addonRepository.findAll().stream()
+                .filter(a -> a.getKey().equals("JOB_STATUS_HISTORY")).findFirst().orElseThrow().getId();
+        UUID tierId = tierRepository.findAll().getFirst().getId();
+        subscriptionRepository.create(orgId, tierId, "MONTHLY", Set.of(historyAddonId));
     }
 
     @Test
@@ -114,7 +127,7 @@ class JobHistoryIntegrationTest {
                 .andExpect(status().isCreated());
 
         UUID newJobId = jobRepository.findByFilters(projectId, null, "New Job", null, null)
-                .get(0).getId();
+                .getFirst().getId();
 
         mockMvc.perform(get(ApiPaths.jobHistory(projectId, newJobId))
                         .with(jwt().jwt(jwt -> jwt.subject(ownerId.toString()).claim("email", "owner@example.com").claim("name", "Owner"))))
@@ -184,7 +197,7 @@ class JobHistoryIntegrationTest {
                 .andExpect(status().isCreated());
 
         UUID assignedJobId = jobRepository.findByFilters(projectId, memberId, null, null, null)
-                .get(0).getId();
+                .getFirst().getId();
 
         mockMvc.perform(get(ApiPaths.jobHistory(projectId, assignedJobId))
                         .with(jwt().jwt(jwt -> jwt.subject(memberId.toString())
